Archive2/9a/d34c9308086a80/output
main.cpp: In function 'int main()':
main.cpp:14:8: error: 'x' was not declared in this scope
 return x;
        ^
