Archive2/9a/d34c9308086a80/main.cpp
#include <iostream>
#include <string>
#include <vector>


#include <assert.h>

extern void foobar(void);


int main()
{

return x;
}
